fix(nav): Fix Icon alignment

--- a/stylus/components/nav.styl
+++ b/stylus/components/nav.styl
@@ -54,6 +54,9 @@ $nav-item-icon
     color var(--coolGrey)
     fill currentColor
 
+    svg
+        display block
+
     .is-active &
         color var(--dodgerBlue)
 
